improves crafting board and crafting menus, especially for iPad. grid sizes based on screen size and margin desired. all menus scale up to same size and are centered. icons scale up. improved async loading of block menu images for better visuals and fewer redundant loads. adjusted moveDelay. added container behind menus that blocks touch events from propagating to the grid when menus are open. fixes posting new logic node icon to parent. better UI for icon upload button. moves all css for nodeSettings into the iframe code.

--- a/css/index.css
+++ b/css/index.css
@@ -269,6 +269,18 @@ body {
     -webkit-animation-timing-function: ease-out;
 }
 
+.centerVerticallyAndHorizontally {
+    position:absolute; /*it can be fixed too*/
+    left:0; right:0;
+    top:0; bottom:0;
+    margin:auto;
+
+    /*this to solve "the content will not be cut when the window is smaller than the content": */
+    max-width:100%;
+    max-height:100%;
+    overflow:auto;
+}
+
 
 
 .Interfaces {
@@ -844,96 +856,6 @@ Logic Interface CSS
   border: none;
 }
 
-/*#nodeSettingsContainer {*/
-  /*text-align: center;*/
-  /*!*padding-top: 25px;*!*/
-  /*line-height: 50px;*/
-  /*font-size: xx-large;*/
-  /*font-weight: 700;*/
-  /*color: #00ffff;*/
-  /*background-color: transparent;*/
-/*}*/
-
-#currentLogicNameText {
-    margin: 20px;
-}
-
-#renameContainer {
-    margin-bottom: 30px;
-    font-size: 10pt;
-}
-
-#newNameTextField {
-    -webkit-user-select: auto;
-    line-height: 30px;
-    border: 3px solid cyan;
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-    box-shadow: none;
-    height: 45px;
-    -webkit-appearance: none;
-    padding-top: 5px;
-    font-size: 18px;
-}
-
-#saveNewNameButton {
-    border: 3px solid cyan;
-    background-color: rgba(0, 255, 255, 0.5);
-    line-height: 30px;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    height: 45px;
-    margin-left: -5px;
-    font-size: 18px;
-}
-
-#logicNodeIcon {
-    width: 100px;
-    height: 100px;
-    position: relative;
-}
-
-#settingsIconImage {
-    width: 100px;
-    height: 100px;
-    position: absolute;
-    left: 0;
-    top: 0;
-    border-radius: 35px;
-    /*<rect id = "2" x="14" y="14" rx="35" ry="35" width="130" height="130" stroke="#00ffff" stroke-width="25" fill="none"/>*/
-}
-
-#settingsIconClipping {
-    width: 100px;
-    height: 100px;
-    position: absolute;
-    left: 0;
-    top: 0;
-    border-radius: 35px;
-    border: 25px solid cyan;
-    /*<rect id = "2" x="14" y="14" rx="35" ry="35" width="130" height="130" stroke="#00ffff" stroke-width="25" fill="none"/>*/
-}
-
-.iconTab {
-    -webkit-user-select: auto;
-    line-height: 30px;
-    border: 3px solid cyan;
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-    box-shadow: none;
-    height: 45px;
-    -webkit-appearance: none;
-    padding-top: 5px;
-    font-size: 18px;
-    background-color: rgb(0,155,155);
-}
-
-.iconTabSelected {
-    background-color: rgb(0,255,255);
-}
-
-
-
 /* block menu */
 
 #menuContainer {
@@ -963,7 +885,6 @@ Logic Interface CSS
 }
 
 .menuBlock {
-    box-sizing: border-box;
   width: 92px;
   height: 46px;
   display: inline-block;
@@ -972,6 +893,7 @@ Logic Interface CSS
   box-sizing: border-box;
   border: solid 2px white;
   margin: 3.5px;
+  margin-bottom: 18px;
 }
 
 .menuBlockContents {
